--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
-.logo {
-  display: flex;
-  align-items: center;
+.navbar-light .navbar-nav .nav-link {
+  color: grey;
+  font-family: "Roboto" Arial, Helvetica, sans-serif;
 }
+
 .navbar-brand img {
   height: 50px;
   width: 100px;
-}
-.navbar-light .navbar-nav .nav-link {
-  color: grey;
 }
 
 .hero {
@@ -33,16 +31,15 @@
   position: absolute;
   top: 49%;
   left: 3%;
-  color: rgb(27, 27, 27);
-
   color: azure;
 }
 .para h2 {
+  font-family: "Bebas Neue", cursive;
   font-size: 50px;
   color: azure;
 }
 .para h4 {
-  font-family: "Roboto" arial;
+  font-family: "Roboto" Arial, Helvetica, sans-serif;
   color: rgb(228, 228, 228);
   margin-bottom: 10px;
   font-size: 20px;
@@ -55,67 +52,6 @@
   font-family: "Bebas Neue", cursive;
   letter-spacing: 2px;
 }
-
-.trend {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-.trend ul {
-  display: flex;
-}
-.trend li {
-  margin-right: 2px;
-  margin-left: 15px;
-  list-style: none;
-  border: 1px solid transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(31, 31, 31);
-  font-family: "Roboto", sans-serif;
-  color: whitesmoke;
-  padding: 10px 20px;
-  width: 150px;
-}
-
-.img-container {
-  position: relative;
-  margin-top: 50px;
-  margin-bottom: 10vh;
-  height: 400px;
-  padding: 0 70px;
-  font-family: "Roboto", sans-serif;
-}
-.card-container {
-  display: flex;
-  justify-content: center;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 420px;
-  position: relative;
-  background-color: #f4f4f4;
-}
-.card img {
-  height: 300px;
-  width: 500px;
-}
-.card small {
-  font-size: 1rem;
-  font-weight: 600;
-}
-.card button {
-  color: rgb(17, 17, 17);
-  margin-top: 10px;
-  padding: 6px 20px;
-  font-weight: 600;
-  border: 1px solid grey;
-}
-
 .logos {
   display: flex;
   justify-content: center;
@@ -138,6 +74,43 @@
   height: 50px;
   width: 50px;
 }
+
+.img-container {
+  position: relative;
+  margin-top: 50px;
+  margin-bottom: 10vh;
+  height: 400px;
+  padding: 0 70px;
+  font-family: "Roboto", sans-serif;
+}
+.card-container {
+  display: flex;
+  justify-content: center;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 400px;
+  background-color: #f4f4f4;
+  font-family: "Oswald", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.cards img {
+  height: 300px;
+  width: 300px;
+}
+
+.cards button {
+  color: rgb(17, 17, 17);
+  margin-top: 10px;
+  padding: 6px 20px;
+  font-weight: 600;
+  border: 1px solid grey;
+}
+
 .banner {
   display: flex;
   flex-wrap: wrap;
@@ -153,8 +126,6 @@
 }
 .owl-dot {
   display: inline-block;
-  height: 20px !important;
-  width: 20px !important;
   background-color: #f4f4f4;
   opacity: 0.8;
   margin: 0 10px;
@@ -169,11 +140,12 @@
   margin-top: 5px;
   font-size: 2rem;
 }
+
 .owl-carousel {
   margin-bottom: 10px;
 }
 #slider {
-  height: 500px;
+  height: 400px;
 }
 .Category-header h3 {
   margin-top: 25vh;
@@ -197,21 +169,25 @@
 }
 .footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
   margin-top: 50px;
   height: 200px;
   background-color: #faf9f9;
-  padding: 10px 25px;
+  padding: 0 5px;
 }
 .logo-footer {
   display: flex;
   flex-direction: column;
 }
-.logo-footer-icon i {
-  font-size: 28px;
-  padding-right: 5px;
+.logo-footer small i {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  align-items: center;
 }
-@media screen and (max-width: 500px) {
+
+@media screen and (max-width: 450px) {
   .heroImg img {
     width: 100%;
     height: auto;
@@ -219,7 +195,7 @@
   }
   .para {
     position: absolute;
-    top: 40%;
+    top: 25%;
     left: 2%;
     line-height: 1;
   }
@@ -253,6 +229,10 @@
   .logos ul {
     display: flex;
     justify-content: center;
+  }
+
+  .card {
+    width: auto;
   }
 
   .card small {
