--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,6 @@
 
 .banner {
   display: flex;
-  flex-wrap: wrap;
 }
 .image-banner img {
   width: 720px;
@@ -156,7 +155,6 @@
 }
 .category {
   display: flex;
-  flex-wrap: wrap;
 }
 .category-banner img {
   width: 720px;
@@ -223,6 +221,8 @@
     width: 30px;
   }
   .banner {
+    display: flex;
+    flex-wrap: wrap;
     padding: 0 10px;
     overflow: hidden;
     margin-left: 20px;
@@ -246,6 +246,8 @@
     align-items: center;
   }
   .category {
+    display: flex;
+    flex-wrap: wrap;
     padding: 0 10px;
     overflow: hidden;
     margin-left: 20px;
