--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,10 @@
   height: 50px;
   width: 100px;
 }
-
-.hero {
+.container-hero {
   position: relative;
+}
+.hero {
   font-family: "Bebas Neue", cursive;
 }
 
