--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap");
 * {
@@ -8,7 +8,7 @@
 }
 .navbar-light .navbar-nav .nav-link {
   color: grey;
-  font-family: "Roboto" Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .navbar-brand img {
@@ -151,7 +151,7 @@
   margin-top: 25vh;
   margin-bottom: 2vh;
   font-size: 30px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
 .category {
@@ -170,10 +170,11 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 30vh;
   height: 200px;
   background-color: #faf9f9;
   padding: 0 5px;
+  font-family: "Poppins", sans-serif;
 }
 .logo-footer {
   display: flex;
@@ -217,9 +218,14 @@
     justify-content: center;
     padding: 0;
   }
+  .logos li {
+    list-style: none;
+    margin-right: 20px;
+    padding: 10px 10px;
+  }
   .logos li img {
     height: 25px;
-    width: 20px;
+    width: 25px;
   }
   .banner {
     display: flex;
