--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,36 @@
   font-size: 20px;
   align-items: center;
 }
+.brand-container {
+  position: relative;
+  margin-top: 50px;
+  margin-bottom: 10vh;
+  height: 400px;
+  padding: 0 70px;
+  font-family: "Roboto", sans-serif;
+}
+.card-container {
+  display: flex;
+  justify-content: center;
+}
+
+.brand-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 400px;
+  background-color: #f1f1f1;
+  font-family: "Oswald", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.brand-cards h3 {
+  padding-top: 25px;
+}
+.brand-cards img {
+  height: 300px;
+  width: 300px;
+}
 
 @media screen and (max-width: 500px) {
   .heroImg img {
@@ -224,8 +254,8 @@
     padding: 10px 10px;
   }
   .logos li img {
-    height: 25px;
-    width: 25px;
+    height: 35px;
+    width: 40px;
   }
   .banner {
     display: flex;
