--- a/css/shoes.css
+++ b/css/shoes.css
@@ -24,7 +24,7 @@
 .image {
   height: 320px;
   width: 400px;
-  background-color: #a3a0a0;
+  background-color: #f1f1f15b;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -37,18 +37,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #faf9f9;
+  color: #575555;
   font-family: "Poppins", sans-serif;
 }
 .movie-desp button {
-  color: white;
+  color: rgb(70, 69, 69);
   text-align: center;
   border: 1px solid transparent;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   width: 100%;
   padding: 15px;
-  background-color: #14213d;
+  background-color: #f1f1f15b;
 }
 .logos {
   display: flex;
