--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,29 @@
   width: 720px;
   height: 300px;
 }
+.button {
+  position: absolute;
+  width: 500px;
+  left: 0;
+  top: 180px;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.35s ease;
+}
+
+.button a {
+  width: 200px;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 2px white;
+  z-index: 1;
+}
+
+.container:hover .button {
+  opacity: 1;
+}
+
 .category-banner img:hover {
   transition: 0.2s ease transform;
   cursor: pointer;
@@ -250,16 +273,18 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
     padding: 0;
   }
   .logos li {
     list-style: none;
-    margin-right: 30px;
+    margin-left: 10px;
+
     padding: 10px 20px;
   }
   .logos li img {
     height: 35px;
-    width: 40px;
+    width: 35px;
   }
   .banner {
     display: flex;
