--- a/css/shoes.css
+++ b/css/shoes.css
@@ -41,14 +41,17 @@
   font-family: "Poppins", sans-serif;
 }
 .movie-desp button {
-  color: rgb(70, 69, 69);
+  color: rgb(238, 236, 236);
   text-align: center;
   border: 1px solid transparent;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   width: 100%;
   padding: 15px;
-  background-color: #f1f1f15b;
+  background-color: #3c4ca8fb;
+}
+.movie-desp button:hover {
+  background-color: #3835d3fb;
 }
 .logos {
   display: flex;
@@ -106,6 +109,9 @@
   width: 100%;
   height: 500px;
   margin-bottom: 10px;
+}
+.carousel-inner {
+  font-size: "Poppins", sans-serif;
 }
 .carousel-item img {
   width: 100%;
