--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@
   height: 50px;
   width: 100px;
 }
+.log {
+  font-size: 1.5rem;
+}
 .container-hero {
   position: relative;
 }
@@ -86,6 +89,11 @@
   padding: 0 70px;
   font-family: "Roboto", sans-serif;
 }
+.img-container h2 {
+  font-family: "Oswald";
+  padding-bottom: 1rem;
+}
+
 .card-container {
   display: flex;
   justify-content: center;
@@ -96,7 +104,7 @@
   flex-direction: column;
   align-items: center;
   height: 400px;
-  background-color: #f1f1f15b;
+
   font-family: "Oswald", sans-serif;
   font-size: 1rem;
   font-weight: 600;
@@ -111,8 +119,10 @@
   margin-top: 10px;
   padding: 6px 20px;
   font-weight: 600;
-  border: 1px solid grey;
-  background-color: #f1f1f15b;
+  border: 1px solid transparent;
+}
+.cards small {
+  font-size: 1rem;
 }
 
 .banner {
@@ -160,10 +170,57 @@
 }
 .category {
   display: flex;
+  position: relative;
 }
+
 .category-banner img {
   width: 720px;
   height: 300px;
+}
+.category-clothes img {
+  width: 720px;
+  height: 300px;
+}
+.category-banner:hover .btn-category {
+  display: block;
+}
+.category-clothes:hover .btn-clothes {
+  display: block;
+}
+.btn-category {
+  display: none;
+  position: absolute;
+  top: 80%;
+  right: 25%;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 5px 30px;
+  background-color: transparent;
+  color: rgb(209, 207, 207);
+}
+.btn-clothes {
+  display: none;
+  position: absolute;
+  top: 80%;
+  left: 23%;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 5px 30px;
+  background-color: transparent;
+  color: rgb(209, 207, 207);
+}
+
+.category-banner img:hover {
+  transition: 0.2s ease transform;
+  cursor: pointer;
+  transform: scale(1.1);
+  filter: brightness(50%);
+}
+.category-clothes img:hover {
+  transition: 0.2s ease transform;
+  cursor: pointer;
+  transform: scale(1.1);
+  filter: brightness(50%);
 }
 .button {
   position: absolute;
@@ -184,15 +241,6 @@
   z-index: 1;
 }
 
-.container:hover .button {
-  opacity: 1;
-}
-
-.category-banner img:hover {
-  transition: 0.2s ease transform;
-  cursor: pointer;
-  transform: scale(1.1);
-}
 .footer {
   display: flex;
   justify-content: space-evenly;
@@ -213,6 +261,7 @@
   font-size: 20px;
   align-items: center;
 }
+
 .brand-container {
   position: relative;
   margin-top: 50px;
@@ -273,13 +322,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
     padding: 0;
   }
   .logos li {
     list-style: none;
     margin-left: 10px;
-
     padding: 10px 20px;
   }
   .logos li img {
@@ -325,5 +372,29 @@
   .logo-footer h4 {
     font-size: 15px;
     font-weight: 800;
+  }
+  .btn-clothes{
+  display: none;
+  position: absolute;
+  top: 30%;
+  left: 33%;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 5px 30px;
+  background-color: transparent;
+  color: rgb(209, 207, 207);
+}
+.btn-category{
+  display: none;
+  position: absolute;
+  top: 80%;
+  left: 33%;
+  border: 1px solid whitesmoke;
+  border-radius: 20px;
+  padding: 5px 30px;
+  background-color: transparent;
+  color: rgb(209, 207, 207);
+}
+
   }
 }
